# enterprise-database-migration

./: .env.example  00_LEIA_PRIMEIRO.md  DIAGNOSE_CHECKLIST.md  Dockerfile  FILE_INDEX.md  INDEX.md  MIGRATE_PERFEXCRM.md  Makefile  PROJECT_COMPLETION_ANALYSIS.md  README.md  README_DIAGNOSE.md  VISUALIZAR_SUMARIO.sh  WORKSPACE_GUIDE.md  activate-mcp.sh  base_component.py  config.ini  destination_config_template.json  docker-compose.yaml  docker-compose.yml  enterprise-database-migration.code-workspace  main.py  mcp-questions.yaml  objetivo.yaml  orchestrator_pure_python.py  postgresql-migration-system.code-workspace  pyproject.toml  quick_migration.py  requirements.txt  run_migration.py  setup.sh
app/: __init__.py
cleanup/: __init__.py  cleanup_database.py  test_sql_fix.py  test_user_dependencies.py
cli/: migrate_perfexcrm.py  run_migration.py
components/: config_manager.py  config_normalizer.py
config/: migration_config.json  migration_rules.json  setup_migration.sh
core/: complete_migration.py  complete_migration_fixed.py  execute_real_migration.py  migrate_users.py  migration_orchestrator.py  migration_structure.py  sqlalchemy_migration.py
docs/: .copilot-strict-rules.md  ANÁLISE_INTEGRAÇÃO_COMPLETA.md  ANÁLISE_ORIGEM_DESTINO_IDÊNTICOS.md  CLEANUP_GUIDE.md  COPILOT_INTEGRATION_GUIDE.md  DEPENDENCY_OPTIMIZATION.md  DIAGNOSE_CHANGES_20251211.md  DIAGNOSE_SUMMARY_20251211.md  EVOLUTION_PERMISSIONS_FIXER.md  FILE_ORGANIZATION_GUIDE.md  FINAL_STATUS_2026-01-16.md  FIX_DATABASE_PERMISSIONS_GUIDE.md  FIX_N8N_PERMISSIONS_ANALYSIS.md  IMPLEMENTATION_SUMMARY_FIX_EVOLUTION_PERMISSIONS.md  INTEGRAÇÃO_COMPLETA_FINALIZADA.md  MEMORIA_MCP_20251003.md  MEMORIA_MCP_20251006_FINAL.md  METABASE_CHECKSUM_ERROR.md  ORQUESTRADOR_PYTHON_MODULAR.md  PROGRESS_DOCUMENTATION.md  PYPROJECT_OPTIMIZATION.md  PYTHON_311_UPGRADE.md  SESSIONS_REPORT_2025_10_03.md  SESSION_RECOVERY_20251211.md  SESSION_RECOVERY_2026-01-16.md  SESSION_REPORT_2026-01-16.md  SESSÃO_DEBUG_20251003.md  SOLUTION_COMPLETE.md  STATUS_FINAL_SISTEMA.md  STATUS_SISTEMA.md  TODAY_ACTIVITIES_20251211.md  TODAY_ACTIVITIES_20260116.md  TODO_20251211.md  TODO_20260116.md  TROUBLESHOOTING_UV_SYNC.md  ai_process_db.sql  app_workforce.sql  botpress_db.sql  exemplos_uso.py  requirements-dev.txt  (+1 more)
examples/: example_fix_evolution_permissions.py
extracted_data/: extracted_data_20251006_114724.json  extracted_data_20251006_141837.json  extracted_data_20251006_142153.json
fix_permissions/: INDEX.md  README.md  fix_metabase_ownership_restored.sql  fix_metabase_permissions.sql  fix_permissions.json  fix_permissions.py  verify_metabase_permissions.py
generated_scripts/: 00_master_migration.sql  01_create_users.sql  02_create_databases.sql  03_apply_grants.sql  03b_apply_grants_n8n_readonly.sql  04_validate_migration.sql
logs/: organization_log_20251006_140300.json
orchestrators/: migration_orchestrator.py
reports/: .gitkeep  00_COMECE_AQUI_SIMULADOR.md  ANALISE_COMPLETA_RESULTADO.md  ANALISE_ERRO_EVOLUTION_API.md  ANALISE_EVOLUTION_API_PERMISSOES.md  ANALISE_EXECUCAO_FINAL.md  ANALISE_EXECUCAO_SIMULADOR.md  ANALISE_FINAL_EXECUCAO_SIMULADOR.md  ANALISE_RESULTADO_EXECUCAO_SIMULADOR.md  ANALISE_RESULTADO_SIMULADOR.md  ANALISE_RESULTADO_SUCESSO.md  ANALISE_UMA_PAGINA.md  ARQUITETURA_SIMULADOR.md  BOAS_VINDAS_SIMULADOR.md  COMO_USAR_SIMULADOR.md  COMPLETION_CHECKLIST.md  CONFIGURACOES_BANCO_DADOS_ENCONTRADAS.md  DIAGRAMA_ESTRUTURA_VISUAL.md  ENCERRAMENTO_SESSAO_2025-11-02.md  ESTRUTURA_PROJETO.md  ESTRUTURA_PROJETO_REORGANIZADO.md  EXECUTION_ANALYSIS_REPORT.md  EXECUTION_RESULT_ANALYSIS.md  EXECUTIVE_SUMMARY.md  EXPECTED_OUTPUT_EXAMPLES.md  FILE_STRUCTURE_MAP.md  FINAL_ANALYSIS.md  FINAL_REPORT.md  FINAL_STATUS_2025-11-02.md  GUIA_RAPIDO_SIMULADOR.md  INDEX_SIMULADOR.md  INDICE_DOCUMENTACAO.md  PROJETO_FINALIZADO.md  QUICK_START_EVOLUTION_PERMISSIONS.md  README_EVOLUTION_PERMISSIONS_FIXER.md  REFERENCIA_IMPORTS.md  REFERENCIA_QUERIES_SQL.md  RELATORIO_FINAL.md  REORGANIZACAO_COMPLETA.md  REORGANIZACAO_COMPLETA_RESUMO.md  (+19 more)
scripts/: .env.n8n.example  LOG_FORMAT.md  README.md  README_BACKUP_PERMISSIONS.md  README_N8N_FIX.md  alter_evolution_api_db_only.sql  apply_n8n_fix.sh  check_deployment_id_format.sql  check_metabase_version.py  clean-root.sh  complete_migration_move.sh  create_structure_db_query.sql  final_migration_cleanup.sh  fix_auth_identity_complete.sql  fix_auth_identity_final.sql  fix_metabase_provider_column.sql  fix_metabase_schema.sql  fix_migration_checksum.sql  fix_n8n_permissions.sql  fix_user_id_type_mismatch.sql  grants_query.sql  mark_fk_migration_as_executed.sql  migrate_perfexcrm_mysql.sh  move_migration_files.sh  (+17 more)
(+95 files in other folders)
